--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
             <version>1.7.9-R0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>uk.co.eluinhost</groupId>
-            <artifactId>ultrahardcore</artifactId>
-            <version>dev-15</version>
+            <groupId>com.publicuhc</groupId>
+            <artifactId>uhc</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
